# apricot

./: Makefile  README.md
goldenrod/: .gitignore  .prettierrc  README.md  codegen.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
goldenrod/src/: App.svelte  app.css  global.d.ts  main.ts
goldenrod/src/components/: GraphModal.svelte  Modal.svelte  NodeEditor.svelte  NodeEditor2.svelte  Panel.svelte  ShortcutList.svelte
goldenrod/src/components/keyboard-ctrl/: KeyboardCtrl.svelte  keyboard-input.ts  (+2 more)
goldenrod/src/config/: colors.ts  interaction-tracker.ts  shortcuts.ts
goldenrod/src/graphql/: client.ts  queries.ts  requests.ts
goldenrod/src/lib/: arrays-equal.ts  debounce.test.ts  debounce.ts  error-handler.ts  resize-store.ts  types.ts
goldenrod/src/local-persist/: db-connect.ts  service-worker.ts  worker.ts
goldenrod/src/persist/: persist.ts
goldenrod/src/state/: README.md  interaction-tracker.ts  nodes.ts  state.ts  types.ts  undo.ts  utils.ts  with-clusters.ts
goldenrod/src/types/: base-block.ts  block-stack.ts  element.ts  interactable.ts  positionable.ts  text-block.ts  types.ts
goldenrod/src/user-input-tracker/: path-trie.ts  types.ts  user-input-tracker.ts  usert-input-tracker.test.ts  utils.ts
proto-server/: .gitignore  README.md  go.mod  go.sum  gqlgen.yml  server.go
proto-server/gql/: resolver.go  schema.gql  schema.resolvers.go  utils.go
proto-server/gql/model/: models_gen.go
proto-server/neo4jdb/: neo4jdb.go
pythie/: .env  .gitignore  README.md  excel.py  main.py  pyproject.toml  test_excel.xlsx
(+104 files in other folders)
