[tool.poetry]
name = "pythie"
version = "0.1.0"
description = ""
authors = ["win-chen <19295645+win-chen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
cdlib = "^0.4.0"
networkx = "^3.4.1"
graphviz = "^0.20.3"
cgraph = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
